--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -44,7 +44,7 @@ html
               li= link_to current_user.name, current_user
               li= link_to "Logout", destroy_user_session_path
             - else
-              li= link_to "Sign in", new_user_session_path
+              li= link_to "Login", new_user_session_path
     .container
       #banner
         .row
