--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,7 @@ html
     .navbar.navbar-default
       .container
         .navbar-header
-          a.navbar-brand href="../"  Social Login
+          a.navbar-brand href="../"  Link
           button.navbar-toggle data-target="#navbar-main" data-toggle="collapse" type="button"
             span.icon-bar
             span.icon-bar
@@ -19,7 +19,7 @@ html
           ul.nav.navbar-nav
             li.dropdown
               a#themes.dropdown-toggle data-toggle="dropdown" href="#"
-                | DropDown
+                | Menu
                 span.caret
               ul.dropdown-menu aria-labelledby="themes"
                 li
