--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,43 +8,21 @@ html
     = csrf_meta_tags
   body
     .navbar.navbar-default
-      .container
-        .navbar-header
-          a.navbar-brand href="../"  Link
+      .container      
+        .navbar-header       
+          a.navbar-brand href=root_path  Inicio
           button.navbar-toggle data-target="#navbar-main" data-toggle="collapse" type="button"
-            span.icon-bar
-            span.icon-bar
-            span.icon-bar
-        #navbar-main.navbar-collapse.collapse
-          ul.nav.navbar-nav
-            li.dropdown
-              a#themes.dropdown-toggle data-toggle="dropdown" href="#"
-                | Menu
-                span.caret
-              ul.dropdown-menu aria-labelledby="themes"
-                li
-                  a href="/" tabindex="-1"  Default
-                li.divider
-                li
-                  a href="#/" tabindex="-1"  Item 1
-                li
-                  a href="#/" tabindex="-1"  Item 2
-                li
-                  a href="#/" tabindex="-1"  Item 3
-                li
-                  a href="#/" tabindex="-1"  Item 4
-                li
-                  a href="#/" tabindex="-1"  Item 5
-                li
-                  a href="#/" tabindex="-1"  Item 6
-            li
-              a href=""  Help
+          a.navbar-brand href="../"  Ajuda
+          button.navbar-toggle data-target="#navbar-main" data-toggle="collapse" type="button"
+           
+        #navbar-main.navbar-collapse.collapse  
+          
           ul.nav.navbar-nav.navbar-right
             - if user_signed_in?
-              li= link_to current_user.name, current_user
-              li= link_to "Logout", destroy_user_session_path
+              li= link_to current_user.name, edit_user_path(current_user)
+              li= link_to "Sair", destroy_user_session_path
             - else
-              li= link_to "Login", new_user_session_path
+              li= link_to "Entrar", new_user_session_path
     .container
       #banner
         .row
