--- a/app/views/pages/landing.html.slim
+++ b/app/views/pages/landing.html.slim
@@ -2,7 +2,7 @@
  = notice
 
 h1 style="color:green"  Bem vindo
-h2=  current_user.name + ','
+h2=  current_user.username + ','
 
 h4  você está conectado ao sistema Laudei. Use o espaço abaixo para anexar os exames desejados.
 
