--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,9 +9,11 @@ html
   body
     .navbar.navbar-default
       .container      
-        .navbar-header       
+        .navbar-header   
+        - if user_signed_in?    
           a.navbar-brand href=root_path  Inicio
           button.navbar-toggle data-target="#navbar-main" data-toggle="collapse" type="button"
+          - if user_signed_in?
           a.navbar-brand href="../"  Ajuda
           button.navbar-toggle data-target="#navbar-main" data-toggle="collapse" type="button"
            
