--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html
       .container      
         .navbar-header   
         - if user_signed_in?    
-          a.navbar-brand href=root_path  Inicio
+          a.navbar-brand href="../"  Inicio
           button.navbar-toggle data-target="#navbar-main" data-toggle="collapse" type="button"
           - if user_signed_in?
           a.navbar-brand href="../"  Ajuda
