--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -1,9 +1,9 @@
 h2
-  | Forgot your password?
+  | Esqueceu sua senha?
 = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f|
   = f.error_notification
   .form-inputs
     = f.input :email, required: true, autofocus: true
   .form-actions
-    = f.button :submit, "Send me reset password instructions"
+    = f.button :submit, "Enviar-me as instruções para redefinir a senha"
 = render "devise/shared/links"
