--- a/app/assets/javascripts/custom.js.erb
+++ b/app/assets/javascripts/custom.js.erb
@@ -1,5 +1,5 @@
 Dropzone.options.myAwesomeDropzone = {     
-    acceptedFiles: "application/pdf",
+    acceptedFiles: "application/pdf,image/jpg,image/jpeg",
   
     init: function() {
     this.on("addedfile", function (file) {
