--- a/app/views/pages/exams.html.slim
+++ b/app/views/pages/exams.html.slim
@@ -7,7 +7,7 @@ html
 h1 style="color:green"  Exames Enviados
 
 #content
-      p This example shows you what a basic Slim file looks like.
+      p Lista dos ultimos exames enviados.
 
       == yield
 
