--- a/app/views/devise/mailer/confirmation_instructions.html.slim
+++ b/app/views/devise/mailer/confirmation_instructions.html.slim
@@ -1,8 +1,8 @@
 p
-  | Welcome 
+  | Bem vindo 
   = @email
   | !
 p
-  | You can confirm your account email through the link below:
+  | Você pode confirmar o e-mail da sua conta através do link abaixo:
 p
-  = link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token)
+  = link_to 'Confirme minha conta', confirmation_url(@resource, confirmation_token: @token)
