--- a/app/views/devise/mailer/email_changed.html.slim
+++ b/app/views/devise/mailer/email_changed.html.slim
@@ -1,14 +1,14 @@
 p
-  | Hello 
+  | Olá 
   = @email
   | !
 - if @resource.try(:unconfirmed_email?)
   p
-    | We're contacting you to notify you that your email is being changed to 
+    | Estamos entrando em contato para notificar que seu email está sendo alterado para 
     = @resource.unconfirmed_email
     | .
 - else
   p
-    | We're contacting you to notify you that your email has been changed to 
+    | Estamos entrando em contato para notificar que seu email foi alterado para 
     = @resource.email
     | .
