--- a/app/views/devise/mailer/password_change.html.slim
+++ b/app/views/devise/mailer/password_change.html.slim
@@ -1,6 +1,6 @@
 p
-  | Hello 
+  | Olá 
   = @resource.email
   | !
 p
-  | We're contacting you to notify you that your password has been changed.
+  | Estamos entrando em contato para notificar que sua senha foi alterada.
