--- a/app/views/devise/mailer/unlock_instructions.html.slim
+++ b/app/views/devise/mailer/unlock_instructions.html.slim
@@ -1,10 +1,10 @@
 p
-  | Hello 
+  | Olá 
   = @resource.email
   | !
 p
-  | Your account has been locked due to an excessive number of unsuccessful sign in attempts.
+  | Sua conta foi bloqueada devido a um número excessivo de tentativas malsucedidas de login.
 p
-  | Click the link below to unlock your account:
+  | Clique no link abaixo para desbloquear sua conta:
 p
-  = link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token)
+  = link_to 'Desbloquear minha conta', unlock_url(@resource, unlock_token: @token)
