--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,5 +1,5 @@
 h2
-  | Edit
+  | Editar
   = resource_name.to_s.humanize
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = f.error_notification
@@ -8,15 +8,15 @@ h2
     = f.input :email, required: true
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       p
-        | Currently waiting confirmation for:
+        | Atualmente aguardando confirmação para:
         = resource.unconfirmed_email
-    = f.input :password, autocomplete: "off", hint: "leave it blank if you don't want to change it", required: false
-    = f.input :current_password, hint: "we need your current password to confirm your changes", required: true
+    = f.input :password, autocomplete: "off", hint: "deixe em branco se não quiser alterá-lo", required: false
+    = f.input :current_password, hint: "precisamos da sua senha atual para confirmar suas alterações", required: true
   .form-actions
-    = f.button :submit, "Update"
+    = f.button :submit, "Atualizar"
 h3
-  | Cancel my account
+  | Cancelar minha conta
 p
-  | Unhappy?
-  = link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete
-= link_to "Back", :back
+  | Infeliz?
+  = link_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "Você tem certeza?" }, method: :delete
+= link_to "Voltar", :back
