--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,5 +1,5 @@
 h2
-  | Sign up
+  | Cadastrar
 = simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
   = f.error_notification
   .form-inputs
@@ -7,5 +7,5 @@ h2
     = f.input :email, required: true, autofocus: true
     = f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length)
   .form-actions
-    = f.button :submit, "Sign up"
+    = f.button :submit, "Cadastrar"
 = render "devise/shared/links"
