--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -2,7 +2,7 @@
   = link_to "Entrar", new_session_path(resource_name)
   br
 - if devise_mapping.registerable? && controller_name != 'registrations'
-  = link_to "Sign up", new_registration_path(resource_name)
+  = link_to "Cadastrar", new_registration_path(resource_name)
   br
 - if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations'
   = link_to "Esqueceu sua senha?", new_password_path(resource_name)
